Fixed vertical spacing in between dynamic fields Files modified - [app.css,Forms.html]

--- a/src/main/webapp/app.css
+++ b/src/main/webapp/app.css
@@ -11,3 +11,9 @@
 .wm-app .form-group + .form-control {
     height: 38px;
 }
+input.form-control {
+    margin-bottom: 9px;
+}
+textarea.form-control {
+    margin-bottom: 9px;
+}
